@@ -42,6 +42,11 @@ sub mainObjectClass
     return 'inetOrgPerson';
 }
 
+sub printableType
+{
+    return __('contact');
+}
+
 # Class method: defaultContainer
 #
 #   Parameters:
@@ -137,6 +142,10 @@ sub create
         data => 'parent', value => $args{parent}->dn()) unless ($args{parent}->isContainer());
 
     my $fullName = $args{fullname};
+    my $parent = $args{parent};
+    my $ignoreMods   = $args{ignoreMods};
+    my $ignoreSlaves = $args{ignoreSlaves};
+
     $fullName = $class->generatedFullName(%args) unless ($fullName);
 
     unless ($fullName) {
@@ -147,9 +156,11 @@ sub create
         );
     }
 
+    $class->checkCN($parent, $fullName);
+
     my $usersMod = EBox::Global->modInstance('users');
 
-    my $dn = 'cn=' . $args{fullname} . ',' . $args{parent}->dn();
+    my $dn = 'cn=' . $fullName . ',' . $parent->dn();
 
     my $res = undef;
     my $parentRes = undef;
@@ -161,7 +172,7 @@ sub create
         # Call modules initialization. The notified modules can modify the entry, add or delete attributes.
         $entry = $parentRes->_entry();
         $usersMod->notifyModsPreLdapUserBase(
-            'preAddContact', [$entry, $args{parent}], $args{ignoreMods}, $args{ignoreSlaves});
+            'preAddContact', [$entry, $parent], $ignoreMods, $ignoreSlaves);
 
         my $result = $entry->update($class->_ldap->{ldap});
         if ($result->is_error()) {
@@ -177,7 +188,7 @@ sub create
         $res = new EBox::Users::Contact(dn => $dn);
 
         # Call modules initialization
-        $usersMod->notifyModsLdapUserBase('addContact', $res, $args{ignoreMods}, $args{ignoreSlaves});
+        $usersMod->notifyModsLdapUserBase('addContact', $res, $ignoreMods, $ignoreSlaves);
     } catch ($error) {
         EBox::error($error);
 
@@ -187,11 +198,11 @@ sub create
         #      commitTransaction and rollbackTransaction. This will allow modules to
         #      make some cleanup if the transaction is aborted
         if (defined $res and $res->exists()) {
-            $usersMod->notifyModsLdapUserBase('addContactFailed', $res, $args{ignoreMods}, $args{ignoreSlaves});
+            $usersMod->notifyModsLdapUserBase('addContactFailed', $res, $ignoreMods, $ignoreSlaves);
             $res->SUPER::deleteObject(@_);
         } elsif ($parentRes and $parentRes->exists()) {
             $usersMod->notifyModsPreLdapUserBase(
-                'preAddContactFailed', [$entry, $args{parent}], $args{ignoreMods}, $args{ignoreSlaves});
+                'preAddContactFailed', [$entry, $parent], $ignoreMods, $ignoreSlaves);
             $parentRes->deleteObject(@_);
         }
         $res = undef;
