@@ -1,4 +1,6 @@
 3.3
+	+ Forbid and print specific  error message when trying to put two
+	  objects with the same CN in the same container
 	+ Switch from Error to TryCatch for exception handling
 	+ The "sub ous" return the OUs hierarquically ordered
 	+ Check for defined uidNumber and gidNumber creating users and groups
